Criacao das entidades e realizando seed no banco

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=jdbc:h2:file:./target/classes/data/delivery;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-#spring.datasource.url=jdbc:h2:mem:delivery
+#DATASOURCE
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:delivery
 
+#H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
